# ie_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.github/: copilot-instructions.md
core/: cache.py  github.py  prompts.py  readthedocs.py  registry.py  resources.py  tools.py
scripts/: fetch_docs.py
