[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ie-mcp"
version = "0.1.0"
description = "MCP server that explains Industrial Ecology related packages"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
]

[project.scripts]
ie-mcp = "server:main"

[tool.hatch.build.targets.wheel]
# include root-level modules so the entry-point works after `pip install -e .`
packages = ["."]
